msg/async/Event: fix valgrind issue init "owner" to zero

Fixes: http://tracker.ceph.com/issues/16685
Signed-off-by: Haomai Wang <haomai@xsky.com>